--- a/js/functions_js.html
+++ b/js/functions_js.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Functions JS</title>
 </head>
 <body>
-$END$
+    <script src="functions.js">
+        function sayHello(name) {
+        return console.log("hello, " + name + ".");
+        }
+    </script>
 </body>
 </html>
