update exercise files

--- a/conditionalbonus.html
+++ b/conditionalbonus.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Loops Exercise</title>
-  <script src="js/for_loops.js"></script>
+    <title>Title</title>
+    <script src="js/conditionalbonus.js"></script>
 </head>
 <body>
+
 </body>
 </html>
