--- a/loops.html
+++ b/loops.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Loops Exercise</title>
-  <script src="js/for_loops.js"></script>
+<!--  <script src="js/for_loops.js"></script>-->
+    <script src="js/break_and_continue.js"></script>
 </head>
 <body>
 </body>
