--- a/loops.html
+++ b/loops.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Loops Exercise</title>
-<!--  <script src="js/for_loops.js"></script>-->
+  <script src="js/for_loops.js"></script>
 <!--    <script src="js/break_and_continue.js"></script>-->
-    <script src="js/while.js"></script>
+<!--    <script src="js/while.js"></script>-->
 </head>
 <body>
 </body>
