--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,60 @@
     <title>First HTML</title>
 </head>
 <body>
-"Hello, World!"
+<h1 id = "top">Welcome to Veridian Dynamics!</h1>
+
+At Veridan Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology</strong></em>.
+<hr>
+<H2>Core Values</H2>
+<ul>
+  <li>Competence</li>
+  <li>Involvement</li>
+  <li>Technology</li>
+</ul>
+<h2>Our Process</h2>
+<ol>
+  <li>Plan</li>
+  <li>Evaluate</li>
+  <li>Implement</li>
+</ol>
+<h2>2020 Vision</h2>
+<ul>
+  <li>Become #1 in Technology</li>
+  <li>Increase Success by 20%</li>
+  <li>Increase Business by 30%</li>
+</ul>
+<hr>
+<h2>Company Vision</h2>
+<img src="img/deskstuff.jpg" width="400" height="400" alt="Desk Stuff">
+<img src="img/dudestanding.jpg" width="400" height="400" alt="Dude Standing Around">
+<img src="img/beactatsunset.jpg" width="400" height="400" alt="Beach at Sunset">
+<img src="img/bread.jpg" width="400" height="400" alt="Bread">
+<h2>Our Product</h2>
+<table>
+  <tr>
+    <th>Plan</th>
+    <th>Price</th>
+    <th>Features</th>
+  </tr>
+  <tr>
+    <td>Starter</td>
+    <td>$99</td>
+    <td>Base Technology</td>
+  </tr>
+  <tr>
+    <td>Advanced</td>
+    <td>$199</td>
+    <td>Additional Features</td>
+  </tr>
+  <tr>
+    <td>Premium</td>
+    <td>$499</td>
+    <td>Unlimited Support</td>
+  </tr>
+</table>
+<br>
+<em>All products come with our quality guarantee</em>&trade;<br>
+<br>
+<a href="#top">Go to the top of the page</a>
 </body>
 </html>
