added exercise files

--- a/github.html
+++ b/github.html
@@ -6,19 +6,19 @@
 </head>
 <body>
 <ul>
-  <li><a href = "">Pull requests</a></li>
-  <li><a href = "">Issues</a></li>
-  <li><a href = "">Marketplace</a></li>
-  <li><a href = "">Explore</a></li>
+  <li><a href = "https://www.google.com/">Pull requests</a></li>
+  <li><a href = "https://www.google.com/">Issues</a></li>
+  <li><a href = "https://www.google.com/">Marketplace</a></li>
+  <li><a href = "https://www.google.com/">Explore</a></li>
 </ul>
 <img src = "img/codeupduck.png" alt = "">
 <h2>Codeup</h2>
 <ul>
-  <li><a href = "">Repos</a>
-  <li><a href = "">People</a>
-  <li><a href = "">Teams</a>
-  <li><a href = "">Projects</a>
-  <li><a href = "">Settings</a>
+  <li><a href = "https://www.google.com/">Repos</a>
+  <li><a href = "https://www.google.com/">People</a>
+  <li><a href = "https://www.google.com/">Teams</a>
+  <li><a href = "https://www.google.com/">Projects</a>
+  <li><a href = "https://www.google.com/">Settings</a>
 </ul>
 <h2>
   Codeup's dev team
@@ -42,13 +42,13 @@
   X team members<br>
 </p>
 <p>&copy 2018 Github. Inc.</p>
-<a href = "">Terms</a>
-<a href = "">Privacy</a>
-<a href = "">Security</a>
-<a href = "">Status</a>
-<a href = "">Help</a><br>
-<a href = "">Contact</a>
-<a href = "">API</a>
-<a href = "">Training</a>
+<a href = "https://www.google.com/">Terms</a>
+<a href = "https://www.google.com/">Privacy</a>
+<a href = "https://www.google.com/">Security</a>
+<a href = "https://www.google.com/">Status</a>
+<a href = "https://www.google.com/">Help</a><br>
+<a href = "https://www.google.com/">Contact</a>
+<a href = "https://www.google.com/">API</a>
+<a href = "https://www.google.com/">Training</a>
 </body>
 </html>
