--- a/welcome.html
+++ b/welcome.html
@@ -5,10 +5,14 @@
     <title>First HTML</title>
 </head>
 <body>
+<header>
 <h1 id="top">Welcome to Veridian Dynamics!</h1>
 
 <p>At Veridan Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology</strong></em>.
 </p>
+</header>
+<main>
+    <section>
 <hr>
 <H2>Core Values</H2>
 <ul>
@@ -28,19 +32,26 @@
     <li>Increase Success by 20%</li>
     <li>Increase Business by 30%</li>
 </ul>
-<hr>
+    </section>
+    <section>
 <h2>Company Vision</h2>
 <img src="img/deskstuff.jpg" width="400" height="400" alt="Desk Stuff">
-<img src="img/dudestanding.jpg" width="400" height="400" alt="Dude Standing Around">
+<img src="img/dudestanding.jpg" width="400" height="400" alt="Dude Standing Around"><br>
 <img src="img/beactatsunset.jpg" width="400" height="400" alt="Beach at Sunset">
 <img src="img/bread.jpg" width="400" height="400" alt="Bread">
+    </section>
+    <section>
+
 <h2>Our Product</h2>
 <table>
+    <thead>
     <tr>
         <th>Plan</th>
         <th>Price</th>
         <th>Features</th>
     </tr>
+    </thead>
+    <tbody>
     <tr>
         <td>Starter</td>
         <td>$99</td>
@@ -56,10 +67,14 @@
         <td>$499</td>
         <td>Unlimited Support</td>
     </tr>
+    </tbody>
 </table>
-<br>
-<em>All products come with our quality guarantee</em>&trade;<br>
-<br>
-<a href="#top">Go to the top of the page</a>
+<hr>
+    </section>
+</main>
+<footer>
+    <p><em>All products come with our quality guarantee</em>&trade;</p>
+    <a href="#top">Go to the top of the page</a>
+</footer>
 </body>
 </html>
