--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>First HTML</title>
+    <style>
+
+        .fancy-header {
+            color: blue; /* single line comment */
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<header>
+<header class ="fancy-header">
 <h1 id="top">Welcome to Veridian Dynamics!</h1>
 
 <p>At Veridan Dynamics, <strong>we</strong> solve <em>your</em> problems with <em><strong>technology</strong></em>.
