--- a/welcome.html
+++ b/welcome.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>First HTML</title>
-    <style>
+    <link rel="stylesheet" href="css/style.css">
 
-        .fancy-header {
-            color: blue; /* single line comment */
-            text-decoration: underline;
-        }
-    </style>
 </head>
 <body>
 <header class ="fancy-header">
