--- a/order-pizza.html
+++ b/order-pizza.html
@@ -62,6 +62,7 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active p-0" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab"
                      tabindex="0">
+                    <!--                    Size and Crust Pane-->
                     <div class="container border border-dark rounded w-100 p-0">
                         <div class="row">
                             <div class="col">
@@ -73,8 +74,14 @@
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.
                                         </li>
-                                        <li class="list-group-item"><input type="radio" id="pizzaSmallGarlic" name="pizzaSize"> <label for="pizzaSmallGarlic"> Small (10")</label></li>
-                                        <li class="list-group-item"><input type="radio" id="pizzaMediumGarlic" name="pizzaSize"> <label for="pizzaMediumGarlic"> Medium (12")</label></li>
+                                        <li class="list-group-item"><input type="radio" id="pizzaSmallGarlic"
+                                                                           name="pizzaSize"> <label
+                                                for="pizzaSmallGarlic">
+                                            Small (10")</label></li>
+                                        <li class="list-group-item"><input type="radio" id="pizzaMediumGarlic"
+                                                                           name="pizzaSize"> <label
+                                                for="pizzaMediumGarlic">
+                                            Medium (12")</label></li>
                                     </ul>
                                 </div>
                                 <br>
@@ -85,62 +92,155 @@
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.
                                         </li>
-                                        <li class="list-group-item"><input type="radio" id="pizzaMediumCrispy" name="pizzaSize"> <label for="pizzaMediumCrispy"> Medium (12")</label></li>
-                                        <li class="list-group-item"> <input type="radio" id="pizzaLargeCrispy" name="pizzaSize"> Large (14")</li>
+                                        <li class="list-group-item"><input type="radio" id="pizzaMediumCrispy"
+                                                                           name="pizzaSize"> <label
+                                                for="pizzaMediumCrispy">
+                                            Medium (12")</label></li>
+                                        <li class="list-group-item"><input type="radio" id="pizzaLargeCrispy"
+                                                                           name="pizzaSize"> Large (14")
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--                Cheese and Sauce Pane-->
+                <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel"
+                     aria-labelledby="profile-tab"
+                     tabindex="0"> Cheese and Sauce
+                    <div class="container border border-dark rounded w-100 p-0">
+                        <div class="row">
+                            <div class="col">
+                                <p class="bg-primary w-100 text-light p-2 rounded">Choose Cheese and Sauce</p>
+                                <div class="card jt-card">
+                                    <div class="card-header">
+                                        Cheese
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">How Much?
+                                        </li>
+                                        <li class="list-group-item"><label for="cheeseAmount"><select
+                                                id="cheeseAmount"
+                                                name="cheeseAmount">
+                                            <option value="none">None</option>
+                                            <option value="normal" selected>Normal</option>
+                                            <option value="extra">Extra</option>
+                                        </select></label>
+                                        </li>
+                                    </ul>
+                                    <div class="card-header">
+                                        Sauce
+                                    </div>
+                                    <li class="list-group-item">What Type?
+                                    </li>
+                                    <li class="list-group-item"><label for="sauceType"><select
+                                            id="sauceType"
+                                            name="sauceType">
+                                        <option value="tomato" selected>Tomato</option>
+                                        <option value="alfredo">Alfredo</option>
+                                        <option value="bbq">BBQ</option>
+                                    </select></label>
+                                    </li>
+                                    <li class="list-group-item">How Much?
+                                    </li>
+                                    <li class="list-group-item"><label for="sauceAmount"><select
+                                            id="sauceAmount"
+                                            name="sauceAmount">
+                                        <option value="none">None</option>
+                                        <option value="normal" selected>Normal</option>
+                                        <option value="extra">Extra</option>
+                                    </select></label>
+                                    </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel"
+                     aria-labelledby="contact-tab"
+                     tabindex="0">
+                    <div class="container border border-dark rounded w-100 p-0">
+                        <div class="row">
+                            <div class="col">
+                                <p class="bg-primary w-100 text-light p-2 rounded">Choose Toppings</p>
+                                <div class="card jt-card">
+                                    <div class="card-header">
+                                        Choose Meats
+                                    </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="beefSelected"> <label for="beefSelected"> Beef
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="hamSelected"> <label for="hamSelected"> Ham
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="steakSelected"> <label for="steakSelected"> Philly Steak
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="baconSelected"> <label for="baconSelected"> Bacon
+                                        </label>
+                                        </li>
                                     </ul>
                                 </div>
 
-                            </div>
-                            <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel"
-                                 aria-labelledby="profile-tab"
-                                 tabindex="0"> Cheese and Sauce
-                                </div>
-                            <div class="container border border-dark rounded w-100 p-0">
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="bg-primary w-100 text-light p-2 rounded">Choose Size and Crust</p>
-                                        <div class="card jt-card">
-                                            <div class="card-header">
-                                                Hand Tossed
-                                            </div>
-                                            <ul class="list-group list-group-flush">
-                                                <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.
-                                                </li>
-                                                <li class="list-group-item"><input type="radio" id="beefSelected" name="beefSelected"> <label for="pizzaSmallGarlic"> Small (10")</label></li>
-                                                <li class="list-group-item"><input type="radio" id="hamSelected" name="hamSelected"> <label for="pizzaMediumGarlic"> Medium (12")</label></li>
-                                            </ul>
-                                        </div>
+                                    <div class="card-header">
+                                        Choose Non-Meats
                                     </div>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="greenPeppersSelected"> <label for="greenPeppersSelected">Green Peppers
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="mushroomsSelected"> <label for="mushroomsSelected"> Mushrooms
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="onionSelected"> <label for="onionSelected"> Onions
+                                        </label>
+                                        </li>
+                                        <li class="list-group-item"><input type="checkbox"
+                                                                           id="jalapenoSelected"> <label for="jalapenoSelected"> Jala&ntildeeno Peppers
+                                        </label>
+                                        </li>
+                                    </ul>
                                 </div>
-
-
-                            <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel"
-                                 aria-labelledby="contact-tab"
-                                 tabindex="0">
-                                Stuff
                             </div>
-                        </div>
-                        <div class="d-flex justify-content-end p-2 border border-dark bg-secondary bg-opacity-10 text-end">
-<!--                            <button class="btn btn-primary" type="button">-->
-<!--                                Next Step >-->
-<!--                                <svg class="bi ms-1" width="20" height="20">-->
-<!--                                    <use xlink:href="#arrow-right-short"></use>-->
-<!--                                </svg>-->
-<!--                            </button>-->
-<!--                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">-->
-<!--                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--                                <span class="visually-hidden">Previous</span>-->
-<!--                            </button>-->
-                            <button class="btn btn-primary" type="button" data-bs-target="#profile-tab" data-bs-slide="#profile-tab-pane">
-                                <span class="">Next ></span>
-                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
-        </form>
     </div>
+    </form>
+</div>
+
+<div class="d-flex justify-content-end p-2 border border-dark bg-secondary bg-opacity-10 text-end">
+    <!--                            <button class="btn btn-primary" type="button">-->
+    <!--                                Next Step >-->
+    <!--                                <svg class="bi ms-1" width="20" height="20">-->
+    <!--                                    <use xlink:href="#arrow-right-short"></use>-->
+    <!--                                </svg>-->
+    <!--                            </button>-->
+    <!--                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">-->
+    <!--                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+    <!--                                <span class="visually-hidden">Previous</span>-->
+    <!--                            </button>-->
+    <button class="btn btn-primary" type="button" data-bs-target="#profile-tab"
+            data-bs-slide="#profile-tab-pane">
+        <span class="">Next ></span>
+    </button>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
