--- a/warmupjs.html
+++ b/warmupjs.html
@@ -1,11 +1,245 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="js/warmupjs.js"></script>
-</head>
-<body>
+<!--&lt;!&ndash;<!DOCTYPE html>&ndash;&gt;-->
+<!--&lt;!&ndash;<html lang="en">&ndash;&gt;-->
+<!--&lt;!&ndash;<head>&ndash;&gt;-->
+<!--&lt;!&ndash;    <meta charset="UTF-8">&ndash;&gt;-->
+<!--&lt;!&ndash;    <title>Title</title>&ndash;&gt;-->
+<!--&lt;!&ndash;    <script src="js/warmupjs.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;</head>&ndash;&gt;-->
+<!--&lt;!&ndash;<body>&ndash;&gt;-->
 
-</body>
-</html>
+<!--&lt;!&ndash;</body>&ndash;&gt;-->
+<!--&lt;!&ndash;</html>&ndash;&gt;-->
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>BOM Lecture</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>BOM Lecture</h1>-->
+
+<!--<script>-->
+
+<!--	"use strict";-->
+
+<!--	/*-->
+<!--        ================================= BROWSER OBJECT MODEL (BOM)-->
+
+<!--        BOM = hierarchy of objects that make up the browser-->
+
+<!--        Highest level object: window object-->
+
+<!--        Main objects nested within the window object:-->
+
+<!--            document  - a tree of elements of the current page-->
+<!--            navigator - info about the browser itself-->
+<!--            location  - info about the current url-->
+<!--            history   - history of visited url with methods to traverse history-->
+<!--            screen    - info about the current browser dimensions-->
+
+<!--            additional information: https://www.w3schools.com/js/js_ex_browser.asp-->
+
+<!--        Important methods within the window object:-->
+<!--            Dialogue functions: alert(), confirm(), prompt()-->
+<!--            setInterval() - starts an interval that can execute a repeated process-->
+<!--            setTimeout() - starts a timer after which a process may execute-->
+
+<!--        Location object:-->
+
+<!--            Redirect to another page or reload the current page-->
+
+<!--    */-->
+
+
+
+<!--	/*-->
+<!--        ================================= setInterval()-->
+
+<!--        Set interval method:-->
+
+<!--        Real world application:-->
+<!--            slide show animation-->
+<!--            music sequencer-->
+<!--            AJAX requests-->
+
+<!--        ** see example **-->
+<!--    */-->
+
+<!--	function sayHello() {-->
+<!--	    console.log("Jeremy Tanner", new Date().toLocaleDateString());-->
+<!--	}-->
+
+<!--	// let intervalId = setInterval(sayHello, 2000);-->
+<!--    //-->
+<!--    // clearInterval(intervalId);-->
+
+<!--	// create interval to say howdy 10 times-->
+
+<!--	// let interval = 200;-->
+<!--	// let i = 1;-->
+<!--	//-->
+<!--	// let intervalId = setInterval(function(){-->
+<!--	//     if (i === 10) {-->
+<!--	//         clearInterval(intervalId);-->
+<!--	//     }-->
+<!--	//     console.log("Howdy!!!");-->
+<!--	//     ++i;-->
+<!--	// }, interval);-->
+<!--	//-->
+<!--	// console.log(intervalId);-->
+
+
+<!--	/*-->
+<!--        ================================= setTimeout()-->
+
+<!--            Real world application:-->
+
+<!--            session time out (online banking)-->
+<!--            pop up window  -  https://ambitionally.com/popupally/sample-time/-->
+<!--    */-->
+
+
+<!--	// create pop up ad after 3 seconds-->
+
+<!--	let x;-->
+<!--	let wait = 2000;-->
+
+<!--	let timeoutId = setTimeout(function() {-->
+<!--	    alert("You WON $1,000,000.00!!!!");-->
+<!--	    x = 23;-->
+<!--	    console.log("The value of x is: " + x);-->
+<!--	}, wait);-->
+
+
+<!--	// asynchronous errors-->
+<!--	//    console.log(x);-->
+
+
+
+
+<!--	// ================================= Location object-->
+
+<!--	// Redirect-->
+
+<!--	// window.location = "https://www.google.com";-->
+
+
+<!--	// Reload page-->
+
+<!--	// location.reload();-->
+<!--	// location.reload(true);-->
+
+
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
+"use strict";
+
+// ========== Retrieve elements by id, class, tag name
+
+// // id
+//     const header = document.getElementById('main-title');
+//     console.log(header);
+
+// // class - will return an HTMLCollection
+//     const cards = document.getElementsByClassName('card');
+//     console.log(cards);
+//     console.log(cards[0]);
+//     // cards.pop(); // ERR/**/OR: Array specific method
+//     const cardsArr = Array.from(cards); // convert HTMLCollection and NodeList to Array
+//     cardsArr.pop();
+//     console.log(cardsArr);
+
+
+
+// // tag
+//     const sections = document.getElementsByTagName('section');
+//     console.log(sections);
+
+
+// ========== Query Selector and Query Selector All
+
+// querySelector()
+
+// const headerTitle = document.querySelector('header h1');
+// const headerTitle = document.querySelector('#main-title');
+// console.log(headerTitle);
+
+// const li = document.querySelector('li'); // only returns first matching
+// console.log(li);
+
+// const lis = document.querySelectorAll('li'); // only returns first matching
+// console.log(lis);
+
+// const secondLi = document.querySelector('li:nth-child(2)');
+// console.log(secondLi);
+
+
+
+// // ========== Direct access to form inputs
+//
+//     const forms = document.forms;
+//     console.log(forms['feedback-form'].feedback.value);
+
+
+// ========== Accessing and modifying elements and properties
+
+// // get value of innerHTML
+//     const heading = document.getElementById("main-heading");
+//     console.log(heading);
+//
+//     console.log(heading.innerHTML);
+//     console.log(heading.innerText);
+
+// set value of innerHTML
+//     heading.innerHTML = "<em>Hi MOM!</em>";
+
+// // set value of innerText
+//     heading.innerText = "<em>Hi MOM!</em>";
+//
+// // append value to innerText (works the same with innerHTML)
+//     heading.innerHTML += " ...and hi Mom!";
+
+
+// // ========== Accessing and modifying attributes
+//
+// // check if attribute exists
+//     const cowboy = document.getElementById('cowboy');
+//     console.log(cowboy.hasAttribute('data-1'));
+//
+// // get an attribute value
+//     console.log(cowboy.getAttribute('data-1'));
+//
+// // create a new attribute or change a value of an existing attribute
+//     cowboy.setAttribute('data-1', 'hello');
+//     cowboy.setAttribute('data-test', 'testing');
+//     console.log(cowboy.getAttribute('data-1'));
+//
+// // remove attribute
+//     cowboy.removeAttribute("data-test");
+//     console.log(cowboy);
+
+
+// // ========== Accessing and modifying styles
+//
+// // single style
+//     const jumbotron = document.querySelector('.jumbotron');
+//     jumbotron.style.display = "none";
+//     jumbotron.style['font-family'] = "times";
+//
+// // apply multiple style changes
+//     Object.assign(jumbotron.style, {
+//         border: "10px solid black","font-family": "times", "text-decoration": "underline"
+//     });
+//
+// // styling node list
+//     const tableRows = document.getElementsByTagName("tr");
+//     for (let i = 0; i < tableRows.length; i += 1) {
+//         tableRows[i].style.background = "red";
+//     }
+
+
+// // ========== Add / Remove Elements
+//
+// see curriculum links
