--- a/warmupjs.html
+++ b/warmupjs.html
@@ -306,36 +306,50 @@
 
 <!--</body>-->
 <!--</html>-->
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>DOM Events Lecture</title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<h1>DOM Events Lecture</h1>-->
+<!--<button id="test-btn">Test Button</button>-->
+<!--<button id="shrink-btn">Restore Text Size</button>-->
+<!--<p>-->
+<!--    Lorem ipsum dolor sit amet, consectetur adipisicing elit.-->
+<!--    Ad aliquam culpa delectus dolores ducimus eius eum ex excepturi-->
+<!--    impedit incidunt ipsum minus necessitatibus officia quisquam,-->
+<!--    recusandae rerum similique sit veniam? Lorem ipsum dolor sit amet,-->
+<!--    consectetur adipisicing elit.-->
+<!--</p>-->
+
+<!--<div style="height: 1000px"></div>-->
+<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur blanditiis consequuntur cumque deserunt ducimus-->
+<!--    ea error est expedita fuga fugit harum illo illum magnam nobis quae quasi qui ratione repellat saepe, similique-->
+<!--    tenetur vitae voluptas. Accusantium aspernatur eum hic reiciendis saepe soluta temporibus voluptate voluptatum.-->
+<!--    Aliquid commodi, corporis doloribus enim eveniet harum ipsam libero magni minus nihil nisi possimus quas similique-->
+<!--    sint sit tempora totam vero vitae? Accusantium aperiam, corporis distinctio dolor, dolorum, iure laudantium modi-->
+<!--    nihil perferendis possimus quisquam rem sequi soluta velit vero? Aut autem dolorem eos facere facilis obcaecati-->
+<!--    officia perspiciatis provident, suscipit voluptates! A, ipsum, ratione.</p>-->
+
+
+<!--<script src="js/warmupjs.js"></script>-->
+
+<!--</body>-->
+<!--</html>-->
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DOM Events Lecture</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script src="js/warmupjs.js"></script>
 </head>
 <body>
-
-<h1>DOM Events Lecture</h1>
-<button id="test-btn">Test Button</button>
-<button id="shrink-btn">Restore Text Size</button>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Ad aliquam culpa delectus dolores ducimus eius eum ex excepturi
-    impedit incidunt ipsum minus necessitatibus officia quisquam,
-    recusandae rerum similique sit veniam? Lorem ipsum dolor sit amet,
-    consectetur adipisicing elit.
-</p>
-
-<div style="height: 1000px"></div>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur blanditiis consequuntur cumque deserunt ducimus
-    ea error est expedita fuga fugit harum illo illum magnam nobis quae quasi qui ratione repellat saepe, similique
-    tenetur vitae voluptas. Accusantium aspernatur eum hic reiciendis saepe soluta temporibus voluptate voluptatum.
-    Aliquid commodi, corporis doloribus enim eveniet harum ipsam libero magni minus nihil nisi possimus quas similique
-    sint sit tempora totam vero vitae? Accusantium aperiam, corporis distinctio dolor, dolorum, iure laudantium modi
-    nihil perferendis possimus quisquam rem sequi soluta velit vero? Aut autem dolorem eos facere facilis obcaecati
-    officia perspiciatis provident, suscipit voluptates! A, ipsum, ratione.</p>
-
-
-<script src="js/warmupjs.js"></script>
 
 </body>
 </html>
