added exercise files

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,8 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+<h1 class="codeup">Heading</h1>
+<p class="codeup">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, iste.</p>
+<ul>
+    <li id="list">1</li>
+    <li class="codeup">2</li>
+    <li>3</li>
+    <li>4</li>
+</ul>
+<div>
 
-
+</div>
 <!--jQuery CDN-->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
