--- a/ajax-store.html
+++ b/ajax-store.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/ajax-store.css">
+    <link rel="stylesheet" href="css/ajax_store.css">
 </head>
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-secondary shadow">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
