--- a/dom-warmups.html
+++ b/dom-warmups.html
@@ -1,12 +1,50 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<button id="button">Press this button</button>-->
+
+<!--    <script src="js/dom-warmups.js"></script>-->
+<!--</body>-->
+<!--</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>DOM Manipulation Warmups</title>
 </head>
 <body>
-<button id="button">Press this button</button>
 
-    <script src="js/dom-warmups.js"></script>
+<h3>The sum is: <span id="sum-output">0</span></h3>
+
+<label for="number">Number</label>
+<input id="number" type="number" name="number" min="0" max="5" value="0">
+<button id="add-btn">Add</button>
+
+<!--  Include the CDN script for jQuery below -->
+<script
+        src="http://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script>
+
+	"use strict";
+
+	// TODO: add the needed JS so that the number selected in the number input will be added to the number in the span when the button is clicked
+
+let addBtn = document.querySelector('#add-btn')
+    let userInput = document.querySelector('#number')
+    let sumTotal = document.querySelector('#sum-output')
+    let sum = 0;
+    addBtn.addEventListener('click',() => {
+		sum += parseInt(userInput.value);
+        sumTotal.innerHTML = `${sum}`;
+        return sum;
+    })
+
+</script>
 </body>
 </html>
